fix(frontend): tokens page wallet button align (#746)

--- a/js/frontend/src/features/wallet/components/wallet/wallet.module.scss
+++ b/js/frontend/src/features/wallet/components/wallet/wallet.module.scss
@@ -1,9 +1,3 @@
-.wallet,
-.button,
-.skeleton {
-  margin-left: auto;
-}
-
 .wallet {
   display: flex;
   gap: 12px;
